<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="35dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <requestFocus />



            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                app:layout_gravity="center"
                android:contentDescription="@string/logoDis" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif"
                tools:ignore="HardcodedText" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <AutoCompleteTextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <EditText
                    android:id="@+id/re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/register_btn"
                android:text="Register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:elevation="5dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Have you account?"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="login"
            android:padding="3dp"
            android:text="Log In"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/background_blur_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/register_loader"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/AVLoadingIndicatorView"
        app:indicatorName="BallClipRotateMultipleIndicator"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:indicatorColor="@android:color/white"/>



</RelativeLayout>