<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="35dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <requestFocus/>



            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                app:layout_gravity="center"
                android:contentDescription="@string/logoDis" />





            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_name"
                    android:text="tareq"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:text="123"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/receiver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Receiver Name"
                    android:imeActionId="7"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="tareq" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/action_sign_in"
                android:textStyle="bold">


            </Button>


            <!--or-->
            <LinearLayout
                android:id="@+id/or_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="110dp"
                    android:layout_gravity="center_vertical"
                    android:background="#b4b4b4"
                    android:layout_height="0.5dp"/>

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="Or"
                    android:gravity="center"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="110dp"
                    android:layout_gravity="center_vertical"
                    android:background="#b4b4b4"
                    android:layout_height="0.5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="2dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">


                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="#ccc"/>


                <FrameLayout
                    android:id="@+id/google_shadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background2">


                        <ImageView
                            android:id="@+id/google_sign_btn"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:background="@android:color/white"
                            android:src="@drawable/google"
                            android:elevation="5dp"
                            app:layout_gravity="center"
                            android:padding="3dp" />


                </FrameLayout>



                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="#ccc"/>



                <FrameLayout
                    android:id="@+id/facebook_shadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background2">



                        <ImageView
                            android:id="@+id/facebook_signin_btn"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:background="@android:color/white"
                            android:src="@drawable/facebook"
                            android:elevation="5dp"
                            app:layout_gravity="center"
                            android:padding="3dp" />



                </FrameLayout>



                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="#ccc"/>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Are you new?"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:padding="3dp"
            android:onClick="createAccount"
            android:layout_gravity="bottom"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/background_blur_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/login_loader"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/AVLoadingIndicatorView"
        app:indicatorName="BallPulseIndicator"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:indicatorColor="@android:color/white"/>


    <ImageButton
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/ic_settings"
        android:onClick="toSettings" />


</RelativeLayout>